--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,29 @@
 *~
 \#*#
 
+# Android files
+*.apk
+*.dex
+
+# Java class files
+*.class
+
+# Generated files
+bin/
+gen/
+
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+project.properties
+
+# IntelliJ
+*.iml
+.idea/
+
 # Tizen binary
 *.wgt
 
