--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '24.0.0'
+    compileSdkVersion project.ext['compileSdkVersion']
+    buildToolsVersion project.ext['buildToolsVersion']
 
     defaultConfig {
         applicationId 'com.nilhcem.hexawatch'
-        versionCode 1
-        versionName '1.0'
+        versionCode project.ext['versionCode']
+        versionName project.ext['versionName']
 
-        minSdkVersion 18
-        targetSdkVersion 24
+        minSdkVersion project.ext['minSdkVersion']
+        targetSdkVersion project.ext['targetSdkVersion']
     }
 
     buildTypes {
@@ -23,5 +23,6 @@ android {
 
 dependencies {
     wearApp project(':wear')
+    compile project(':common')
     compile 'com.android.support:appcompat-v7:24.0.0'
 }
