--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,15 @@ allprojects {
     repositories {
         jcenter()
     }
+
+    project.ext {
+        versionCode = 1
+        versionName = '1.0.0'
+        compileSdkVersion = 24
+        buildToolsVersion = '24.0.0'
+        minSdkVersion = 18
+        targetSdkVersion = 24
+    }
 }
 
 task clean(type: Delete) {
