--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '24.0.0'
+    compileSdkVersion project.ext['compileSdkVersion']
+    buildToolsVersion project.ext['buildToolsVersion']
 
     defaultConfig {
         applicationId 'com.nilhcem.hexawatch'
-        versionCode 1
-        versionName '1.0'
+        versionCode project.ext['versionCode']
+        versionName project.ext['versionName']
 
         minSdkVersion 21
-        targetSdkVersion 24
+        targetSdkVersion project.ext['targetSdkVersion']
     }
 
     buildTypes {
@@ -22,6 +22,6 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.support:wearable:2.0.0-alpha2'
-    compile 'com.google.android.gms:play-services-wearable:9.2.1'
+    compile project(':common')
+    compile 'com.google.android.support:wearable:1.4.0'
 }
