--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="nilhcem.com.hexawatch"
+    package="com.nilhcem.hexawatch"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-feature android:name="android.hardware.type.watch"/>
 
-    <!-- Required to act as a custom watch face. -->
+    <!-- Required to act as a custom watch face -->
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
@@ -14,27 +14,24 @@
         android:theme="@android:style/Theme.DeviceDefault">
 
         <service
-            android:name="com.nilhcem.hexawatch.MyWatchFace"
-            android:label="@string/my_analog_name"
+            android:name=".HexawatchService"
+            android:label="@string/app_name"
             android:permission="android.permission.BIND_WALLPAPER">
+
             <meta-data
                 android:name="android.service.wallpaper"
                 android:resource="@xml/watch_face"/>
             <meta-data
                 android:name="com.google.android.wearable.watchface.preview"
-                android:resource="@drawable/preview_analog"/>
+                android:resource="@drawable/preview_square"/>
             <meta-data
                 android:name="com.google.android.wearable.watchface.preview_circular"
-                android:resource="@drawable/preview_analog"/>
+                android:resource="@drawable/preview_circular"/>
 
             <intent-filter>
                 <action android:name="android.service.wallpaper.WallpaperService"/>
                 <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE"/>
             </intent-filter>
         </service>
-
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
     </application>
 </manifest>
