--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@android:style/Theme.DeviceDefault">
 
         <service
-            android:name=".HexawatchService"
+            android:name=".ui.watchface.HexawatchService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_WALLPAPER">
 
