--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,6 @@ android {
 dependencies {
     wearApp project(':wear')
     compile project(':common')
-    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile "com.android.support:appcompat-v7:$supportVersion"
+    compile "com.android.support:recyclerview-v7:$supportVersion"
 }
