--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.DeviceDefault">
 
@@ -41,11 +40,10 @@
             </intent-filter>
         </service>
 
-        <activity
-            android:name=".ui.config.WatchConfigActivity"
-            android:label="@string/config_label">
+        <activity android:name=".ui.config.WatchConfigActivity">
             <intent-filter>
                 <action android:name="com.nilhcem.hexawatch.CONFIG_WATCHFACE"/>
+
                 <category android:name="com.google.android.wearable.watchface.category.WEARABLE_CONFIGURATION"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
