Add TabLayout + ViewPager to ConfigActivity

--- a/companion/build.gradle
+++ b/companion/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile project(':common')
 
     compile "com.android.support:appcompat-v7:$supportVersion"
+    compile "com.android.support:design:$supportVersion"
     compile "com.android.support:recyclerview-v7:$supportVersion"
 
     compile "com.jakewharton:butterknife:$butterknifeVersion"
