--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <application
         android:label="@string/app_name"
+        android:allowBackup="true"
         android:theme="@style/WearAppTheme">
 
         <service
