Remove test intent filter

--- a/companion/src/main/AndroidManifest.xml
+++ b/companion/src/main/AndroidManifest.xml
@@ -13,16 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity
-            android:name=".ui.config.ConfigActivity"
-            android:label="@string/config_label">
-
-            <!-- TODO: Remove this intent filter -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-
+        <activity android:name=".ui.config.ConfigActivity">
             <intent-filter>
                 <action android:name="com.nilhcem.hexawatch.CONFIG_WATCHFACE"/>
 
