--- a/common/build.gradle
+++ b/common/build.gradle
@@ -14,7 +14,8 @@ android {
 
     dependencies {
         compile "com.android.support:support-annotations:$supportVersion"
-        compile 'com.google.android.gms:play-services-wearable:9.4.0'
-        compile 'com.google.protobuf:protobuf-java:3.0.0'
+        compile "com.android.support:support-v4:$supportVersion"
+        compile 'com.google.android.gms:play-services-wearable:10.2.1'
+        compile 'com.google.protobuf:protobuf-java:3.2.0'
     }
 }
