--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -23,5 +23,6 @@ android {
 
 dependencies {
     compile project(':common')
-    compile 'com.google.android.support:wearable:1.4.0'
+    compile 'com.google.android.support:wearable:2.0.1'
+    provided 'com.google.android.wearable:wearable:2.0.1'
 }
