--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ allprojects {
     }
 
     project.ext {
+        applicationId = 'com.nilhcem.hexawatch'
         versionCode = 1
         versionName = '1.0.0'
         compileSdkVersion = 25
