Define wear app as standalone

--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
     <application
         android:theme="@style/WearAppTheme">
 
+        <meta-data
+            android:name="com.google.android.wearable.standalone"
+            android:value="true"/>
+
         <service
             android:name=".ui.watchface.HexawatchService"
             android:label="@string/app_name"
