--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,15 @@ allprojects {
 
     project.ext {
         applicationId = 'com.nilhcem.hexawatch'
-        versionCode = 1
-        versionName = '1.0.0'
         compileSdkVersion = 25
-        buildToolsVersion = '25.0.2'
-        minSdkVersion = 18
         targetSdkVersion = 25
+        buildToolsVersion = '25.0.2'
+        minSdkVersionCompanion = 18
+
+        versionName = '1.1.0'
+        def buildNumber = '01'
+        def multiApkVariant = '00'
+        versionCode = versionName.replace('.', '') + buildNumber + multiApkVariant
     }
 }
 
