--- a/companion/build.gradle
+++ b/companion/build.gradle
@@ -11,10 +11,10 @@ android {
 
     defaultConfig {
         applicationId project.ext['applicationId']
-        versionCode project.ext['versionCode']
         versionName project.ext['versionName']
+        versionCode project.ext['versionCode'].toInteger()
 
-        minSdkVersion project.ext['minSdkVersion']
+        minSdkVersion project.ext['minSdkVersionCompanion']
         targetSdkVersion project.ext['targetSdkVersion']
     }
 
@@ -29,8 +29,8 @@ android {
 ext.butterknifeVersion = '8.5.1'
 
 dependencies {
-    wearApp project(':wear')
     compile project(':common')
+    wearApp project(path: ':wear', configuration: 'wear1Release')
 
     compile "com.android.support:appcompat-v7:$supportVersion"
     compile "com.android.support:design:$supportVersion"
